@@ -1,400 +1,0 @@
-@comment $NetBSD: PLIST,v 1.8 2017/08/25 06:24:03 adam Exp $
-bin/nevow-xmlgettext
-bin/nit
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/formless/__init__.py
-${PYSITELIB}/formless/__init__.pyc
-${PYSITELIB}/formless/__init__.pyo
-${PYSITELIB}/formless/annotate.py
-${PYSITELIB}/formless/annotate.pyc
-${PYSITELIB}/formless/annotate.pyo
-${PYSITELIB}/formless/configurable.py
-${PYSITELIB}/formless/configurable.pyc
-${PYSITELIB}/formless/configurable.pyo
-${PYSITELIB}/formless/formutils.py
-${PYSITELIB}/formless/formutils.pyc
-${PYSITELIB}/formless/formutils.pyo
-${PYSITELIB}/formless/freeform-default.css
-${PYSITELIB}/formless/iformless.py
-${PYSITELIB}/formless/iformless.pyc
-${PYSITELIB}/formless/iformless.pyo
-${PYSITELIB}/formless/processors.py
-${PYSITELIB}/formless/processors.pyc
-${PYSITELIB}/formless/processors.pyo
-${PYSITELIB}/formless/test/__init__.py
-${PYSITELIB}/formless/test/__init__.pyc
-${PYSITELIB}/formless/test/__init__.pyo
-${PYSITELIB}/formless/test/test_formless.py
-${PYSITELIB}/formless/test/test_formless.pyc
-${PYSITELIB}/formless/test/test_formless.pyo
-${PYSITELIB}/formless/test/test_freeform.py
-${PYSITELIB}/formless/test/test_freeform.pyc
-${PYSITELIB}/formless/test/test_freeform.pyo
-${PYSITELIB}/formless/webform.py
-${PYSITELIB}/formless/webform.pyc
-${PYSITELIB}/formless/webform.pyo
-${PYSITELIB}/nevow/Canvas.fla
-${PYSITELIB}/nevow/Canvas.swf
-${PYSITELIB}/nevow/__init__.py
-${PYSITELIB}/nevow/__init__.pyc
-${PYSITELIB}/nevow/__init__.pyo
-${PYSITELIB}/nevow/_flat.py
-${PYSITELIB}/nevow/_flat.pyc
-${PYSITELIB}/nevow/_flat.pyo
-${PYSITELIB}/nevow/_version.py
-${PYSITELIB}/nevow/_version.pyc
-${PYSITELIB}/nevow/_version.pyo
-${PYSITELIB}/nevow/_widget_plugin.py
-${PYSITELIB}/nevow/_widget_plugin.pyc
-${PYSITELIB}/nevow/_widget_plugin.pyo
-${PYSITELIB}/nevow/accessors.py
-${PYSITELIB}/nevow/accessors.pyc
-${PYSITELIB}/nevow/accessors.pyo
-${PYSITELIB}/nevow/appserver.py
-${PYSITELIB}/nevow/appserver.pyc
-${PYSITELIB}/nevow/appserver.pyo
-${PYSITELIB}/nevow/athena.py
-${PYSITELIB}/nevow/athena.pyc
-${PYSITELIB}/nevow/athena.pyo
-${PYSITELIB}/nevow/athena_private/connection-status-down.png
-${PYSITELIB}/nevow/athena_private/connection-status-down.svg
-${PYSITELIB}/nevow/blocks.py
-${PYSITELIB}/nevow/blocks.pyc
-${PYSITELIB}/nevow/blocks.pyo
-${PYSITELIB}/nevow/canvas.as
-${PYSITELIB}/nevow/canvas.py
-${PYSITELIB}/nevow/canvas.pyc
-${PYSITELIB}/nevow/canvas.pyo
-${PYSITELIB}/nevow/compression.py
-${PYSITELIB}/nevow/compression.pyc
-${PYSITELIB}/nevow/compression.pyo
-${PYSITELIB}/nevow/compy.py
-${PYSITELIB}/nevow/compy.pyc
-${PYSITELIB}/nevow/compy.pyo
-${PYSITELIB}/nevow/context.py
-${PYSITELIB}/nevow/context.pyc
-${PYSITELIB}/nevow/context.pyo
-${PYSITELIB}/nevow/css/Nevow/TagLibrary/TabbedPane.css
-${PYSITELIB}/nevow/css/Nevow/TagLibrary/__init__.css
-${PYSITELIB}/nevow/css/Nevow/__init__.css
-${PYSITELIB}/nevow/dirlist.py
-${PYSITELIB}/nevow/dirlist.pyc
-${PYSITELIB}/nevow/dirlist.pyo
-${PYSITELIB}/nevow/empty-module.css
-${PYSITELIB}/nevow/empty-module.js
-${PYSITELIB}/nevow/entities.py
-${PYSITELIB}/nevow/entities.pyc
-${PYSITELIB}/nevow/entities.pyo
-${PYSITELIB}/nevow/errors.py
-${PYSITELIB}/nevow/errors.pyc
-${PYSITELIB}/nevow/errors.pyo
-${PYSITELIB}/nevow/events.py
-${PYSITELIB}/nevow/events.pyc
-${PYSITELIB}/nevow/events.pyo
-${PYSITELIB}/nevow/failure.py
-${PYSITELIB}/nevow/failure.pyc
-${PYSITELIB}/nevow/failure.pyo
-${PYSITELIB}/nevow/flat/__init__.py
-${PYSITELIB}/nevow/flat/__init__.pyc
-${PYSITELIB}/nevow/flat/__init__.pyo
-${PYSITELIB}/nevow/flat/flatmdom.py
-${PYSITELIB}/nevow/flat/flatmdom.pyc
-${PYSITELIB}/nevow/flat/flatmdom.pyo
-${PYSITELIB}/nevow/flat/flatsax.py
-${PYSITELIB}/nevow/flat/flatsax.pyc
-${PYSITELIB}/nevow/flat/flatsax.pyo
-${PYSITELIB}/nevow/flat/flatstan.py
-${PYSITELIB}/nevow/flat/flatstan.pyc
-${PYSITELIB}/nevow/flat/flatstan.pyo
-${PYSITELIB}/nevow/flat/ten.py
-${PYSITELIB}/nevow/flat/ten.pyc
-${PYSITELIB}/nevow/flat/ten.pyo
-${PYSITELIB}/nevow/flat/twist.py
-${PYSITELIB}/nevow/flat/twist.pyc
-${PYSITELIB}/nevow/flat/twist.pyo
-${PYSITELIB}/nevow/guard.py
-${PYSITELIB}/nevow/guard.pyc
-${PYSITELIB}/nevow/guard.pyo
-${PYSITELIB}/nevow/i18n.py
-${PYSITELIB}/nevow/i18n.pyc
-${PYSITELIB}/nevow/i18n.pyo
-${PYSITELIB}/nevow/inevow.py
-${PYSITELIB}/nevow/inevow.pyc
-${PYSITELIB}/nevow/inevow.pyo
-${PYSITELIB}/nevow/itaglibrary.py
-${PYSITELIB}/nevow/itaglibrary.pyc
-${PYSITELIB}/nevow/itaglibrary.pyo
-${PYSITELIB}/nevow/js/Divmod/Base.js
-${PYSITELIB}/nevow/js/Divmod/Defer.js
-${PYSITELIB}/nevow/js/Divmod/Inspect.js
-${PYSITELIB}/nevow/js/Divmod/MockBrowser.js
-${PYSITELIB}/nevow/js/Divmod/Runtime/Tests.js
-${PYSITELIB}/nevow/js/Divmod/Runtime/__init__.js
-${PYSITELIB}/nevow/js/Divmod/Test/Mock.js
-${PYSITELIB}/nevow/js/Divmod/Test/TestBase.js
-${PYSITELIB}/nevow/js/Divmod/Test/TestDeferred.js
-${PYSITELIB}/nevow/js/Divmod/Test/TestInspect.js
-${PYSITELIB}/nevow/js/Divmod/Test/TestLivetrial.js
-${PYSITELIB}/nevow/js/Divmod/Test/TestObject.js
-${PYSITELIB}/nevow/js/Divmod/Test/TestRuntime.js
-${PYSITELIB}/nevow/js/Divmod/Test/TestUnitTest.js
-${PYSITELIB}/nevow/js/Divmod/Test/__init__.js
-${PYSITELIB}/nevow/js/Divmod/UnitTest.js
-${PYSITELIB}/nevow/js/Divmod/XML.js
-${PYSITELIB}/nevow/js/Divmod/__init__.js
-${PYSITELIB}/nevow/js/Nevow/Athena/Test.js
-${PYSITELIB}/nevow/js/Nevow/Athena/Tests/Resources.js
-${PYSITELIB}/nevow/js/Nevow/Athena/Tests/__init__.js
-${PYSITELIB}/nevow/js/Nevow/Athena/__init__.js
-${PYSITELIB}/nevow/js/Nevow/TagLibrary/TabbedPane.js
-${PYSITELIB}/nevow/js/Nevow/TagLibrary/__init__.js
-${PYSITELIB}/nevow/js/Nevow/Test/ReconnectAcceptanceTest.js
-${PYSITELIB}/nevow/js/Nevow/Test/TestHowtoListing00.js
-${PYSITELIB}/nevow/js/Nevow/Test/TestHowtoListing01.js
-${PYSITELIB}/nevow/js/Nevow/Test/TestInit.js
-${PYSITELIB}/nevow/js/Nevow/Test/TestMessageDelivery.js
-${PYSITELIB}/nevow/js/Nevow/Test/TestTabbedPane.js
-${PYSITELIB}/nevow/js/Nevow/Test/TestWidget.js
-${PYSITELIB}/nevow/js/Nevow/Test/Util.js
-${PYSITELIB}/nevow/js/Nevow/Test/WidgetUtil.js
-${PYSITELIB}/nevow/js/Nevow/Test/__init__.js
-${PYSITELIB}/nevow/js/Nevow/__init__.js
-${PYSITELIB}/nevow/js/PythonTestSupport/Dependee.js
-${PYSITELIB}/nevow/js/PythonTestSupport/Dependor.js
-${PYSITELIB}/nevow/js/PythonTestSupport/__init__.js
-${PYSITELIB}/nevow/json.py
-${PYSITELIB}/nevow/json.pyc
-${PYSITELIB}/nevow/json.pyo
-${PYSITELIB}/nevow/jsutil.py
-${PYSITELIB}/nevow/jsutil.pyc
-${PYSITELIB}/nevow/jsutil.pyo
-${PYSITELIB}/nevow/livetrial/__init__.py
-${PYSITELIB}/nevow/livetrial/__init__.pyc
-${PYSITELIB}/nevow/livetrial/__init__.pyo
-${PYSITELIB}/nevow/livetrial/livetest.css
-${PYSITELIB}/nevow/livetrial/runner.py
-${PYSITELIB}/nevow/livetrial/runner.pyc
-${PYSITELIB}/nevow/livetrial/runner.pyo
-${PYSITELIB}/nevow/livetrial/testcase.py
-${PYSITELIB}/nevow/livetrial/testcase.pyc
-${PYSITELIB}/nevow/livetrial/testcase.pyo
-${PYSITELIB}/nevow/loaders.py
-${PYSITELIB}/nevow/loaders.pyc
-${PYSITELIB}/nevow/loaders.pyo
-${PYSITELIB}/nevow/newsfragments/.gitignore
-${PYSITELIB}/nevow/page.py
-${PYSITELIB}/nevow/page.pyc
-${PYSITELIB}/nevow/page.pyo
-${PYSITELIB}/nevow/plugins/__init__.py
-${PYSITELIB}/nevow/plugins/__init__.pyc
-${PYSITELIB}/nevow/plugins/__init__.pyo
-${PYSITELIB}/nevow/plugins/nevow_package.py
-${PYSITELIB}/nevow/plugins/nevow_package.pyc
-${PYSITELIB}/nevow/plugins/nevow_package.pyo
-${PYSITELIB}/nevow/query.py
-${PYSITELIB}/nevow/query.pyc
-${PYSITELIB}/nevow/query.pyo
-${PYSITELIB}/nevow/rend.py
-${PYSITELIB}/nevow/rend.pyc
-${PYSITELIB}/nevow/rend.pyo
-${PYSITELIB}/nevow/scripts/__init__.py
-${PYSITELIB}/nevow/scripts/__init__.pyc
-${PYSITELIB}/nevow/scripts/__init__.pyo
-${PYSITELIB}/nevow/scripts/nit.py
-${PYSITELIB}/nevow/scripts/nit.pyc
-${PYSITELIB}/nevow/scripts/nit.pyo
-${PYSITELIB}/nevow/scripts/xmlgettext.py
-${PYSITELIB}/nevow/scripts/xmlgettext.pyc
-${PYSITELIB}/nevow/scripts/xmlgettext.pyo
-${PYSITELIB}/nevow/stan.py
-${PYSITELIB}/nevow/stan.pyc
-${PYSITELIB}/nevow/stan.pyo
-${PYSITELIB}/nevow/static.py
-${PYSITELIB}/nevow/static.pyc
-${PYSITELIB}/nevow/static.pyo
-${PYSITELIB}/nevow/taglibrary/__init__.py
-${PYSITELIB}/nevow/taglibrary/__init__.pyc
-${PYSITELIB}/nevow/taglibrary/__init__.pyo
-${PYSITELIB}/nevow/taglibrary/cal.py
-${PYSITELIB}/nevow/taglibrary/cal.pyc
-${PYSITELIB}/nevow/taglibrary/cal.pyo
-${PYSITELIB}/nevow/taglibrary/tabbedPane.py
-${PYSITELIB}/nevow/taglibrary/tabbedPane.pyc
-${PYSITELIB}/nevow/taglibrary/tabbedPane.pyo
-${PYSITELIB}/nevow/tags.py
-${PYSITELIB}/nevow/tags.pyc
-${PYSITELIB}/nevow/tags.pyo
-${PYSITELIB}/nevow/test/__init__.py
-${PYSITELIB}/nevow/test/__init__.pyc
-${PYSITELIB}/nevow/test/__init__.pyo
-${PYSITELIB}/nevow/test/acceptance/__init__.py
-${PYSITELIB}/nevow/test/acceptance/__init__.pyc
-${PYSITELIB}/nevow/test/acceptance/__init__.pyo
-${PYSITELIB}/nevow/test/acceptance/reconnect.py
-${PYSITELIB}/nevow/test/acceptance/reconnect.pyc
-${PYSITELIB}/nevow/test/acceptance/reconnect.pyo
-${PYSITELIB}/nevow/test/acceptance/tabbedpane.py
-${PYSITELIB}/nevow/test/acceptance/tabbedpane.pyc
-${PYSITELIB}/nevow/test/acceptance/tabbedpane.pyo
-${PYSITELIB}/nevow/test/livetest_athena.py
-${PYSITELIB}/nevow/test/livetest_athena.pyc
-${PYSITELIB}/nevow/test/livetest_athena.pyo
-${PYSITELIB}/nevow/test/livetest_runtime.py
-${PYSITELIB}/nevow/test/livetest_runtime.pyc
-${PYSITELIB}/nevow/test/livetest_runtime.pyo
-${PYSITELIB}/nevow/test/test_accessors.py
-${PYSITELIB}/nevow/test/test_accessors.pyc
-${PYSITELIB}/nevow/test/test_accessors.pyo
-${PYSITELIB}/nevow/test/test_appserver.py
-${PYSITELIB}/nevow/test/test_appserver.pyc
-${PYSITELIB}/nevow/test/test_appserver.pyo
-${PYSITELIB}/nevow/test/test_athena.py
-${PYSITELIB}/nevow/test/test_athena.pyc
-${PYSITELIB}/nevow/test/test_athena.pyo
-${PYSITELIB}/nevow/test/test_compression.py
-${PYSITELIB}/nevow/test/test_compression.pyc
-${PYSITELIB}/nevow/test/test_compression.pyo
-${PYSITELIB}/nevow/test/test_consolejstest.py
-${PYSITELIB}/nevow/test/test_consolejstest.pyc
-${PYSITELIB}/nevow/test/test_consolejstest.pyo
-${PYSITELIB}/nevow/test/test_context.py
-${PYSITELIB}/nevow/test/test_context.pyc
-${PYSITELIB}/nevow/test/test_context.pyo
-${PYSITELIB}/nevow/test/test_disktemplate.py
-${PYSITELIB}/nevow/test/test_disktemplate.pyc
-${PYSITELIB}/nevow/test/test_disktemplate.pyo
-${PYSITELIB}/nevow/test/test_element.py
-${PYSITELIB}/nevow/test/test_element.pyc
-${PYSITELIB}/nevow/test/test_element.pyo
-${PYSITELIB}/nevow/test/test_errorhandler.py
-${PYSITELIB}/nevow/test/test_errorhandler.pyc
-${PYSITELIB}/nevow/test/test_errorhandler.pyo
-${PYSITELIB}/nevow/test/test_flatsax.py
-${PYSITELIB}/nevow/test/test_flatsax.pyc
-${PYSITELIB}/nevow/test/test_flatsax.pyo
-${PYSITELIB}/nevow/test/test_flatstan.py
-${PYSITELIB}/nevow/test/test_flatstan.pyc
-${PYSITELIB}/nevow/test/test_flatstan.pyo
-${PYSITELIB}/nevow/test/test_flatten.py
-${PYSITELIB}/nevow/test/test_flatten.pyc
-${PYSITELIB}/nevow/test/test_flatten.pyo
-${PYSITELIB}/nevow/test/test_guard.py
-${PYSITELIB}/nevow/test/test_guard.pyc
-${PYSITELIB}/nevow/test/test_guard.pyo
-${PYSITELIB}/nevow/test/test_howtolistings.py
-${PYSITELIB}/nevow/test/test_howtolistings.pyc
-${PYSITELIB}/nevow/test/test_howtolistings.pyo
-${PYSITELIB}/nevow/test/test_i18n.py
-${PYSITELIB}/nevow/test/test_i18n.pyc
-${PYSITELIB}/nevow/test/test_i18n.pyo
-${PYSITELIB}/nevow/test/test_javascript.py
-${PYSITELIB}/nevow/test/test_javascript.pyc
-${PYSITELIB}/nevow/test/test_javascript.pyo
-${PYSITELIB}/nevow/test/test_json.py
-${PYSITELIB}/nevow/test/test_json.pyc
-${PYSITELIB}/nevow/test/test_json.pyo
-${PYSITELIB}/nevow/test/test_later.py
-${PYSITELIB}/nevow/test/test_later.pyc
-${PYSITELIB}/nevow/test/test_later.pyo
-${PYSITELIB}/nevow/test/test_loaders.py
-${PYSITELIB}/nevow/test/test_loaders.pyc
-${PYSITELIB}/nevow/test/test_loaders.pyo
-${PYSITELIB}/nevow/test/test_newflat.py
-${PYSITELIB}/nevow/test/test_newflat.pyc
-${PYSITELIB}/nevow/test/test_newflat.pyo
-${PYSITELIB}/nevow/test/test_nit.py
-${PYSITELIB}/nevow/test/test_nit.pyc
-${PYSITELIB}/nevow/test/test_nit.pyo
-${PYSITELIB}/nevow/test/test_package.py
-${PYSITELIB}/nevow/test/test_package.pyc
-${PYSITELIB}/nevow/test/test_package.pyo
-${PYSITELIB}/nevow/test/test_passobj.py
-${PYSITELIB}/nevow/test/test_passobj.pyc
-${PYSITELIB}/nevow/test/test_passobj.pyo
-${PYSITELIB}/nevow/test/test_query.py
-${PYSITELIB}/nevow/test/test_query.pyc
-${PYSITELIB}/nevow/test/test_query.pyo
-${PYSITELIB}/nevow/test/test_rend.py
-${PYSITELIB}/nevow/test/test_rend.pyc
-${PYSITELIB}/nevow/test/test_rend.pyo
-${PYSITELIB}/nevow/test/test_stan.py
-${PYSITELIB}/nevow/test/test_stan.pyc
-${PYSITELIB}/nevow/test/test_stan.pyo
-${PYSITELIB}/nevow/test/test_static.py
-${PYSITELIB}/nevow/test/test_static.pyc
-${PYSITELIB}/nevow/test/test_static.pyo
-${PYSITELIB}/nevow/test/test_tabbedpane.py
-${PYSITELIB}/nevow/test/test_tabbedpane.pyc
-${PYSITELIB}/nevow/test/test_tabbedpane.pyo
-${PYSITELIB}/nevow/test/test_tags.py
-${PYSITELIB}/nevow/test/test_tags.pyc
-${PYSITELIB}/nevow/test/test_tags.pyo
-${PYSITELIB}/nevow/test/test_testutil.py
-${PYSITELIB}/nevow/test/test_testutil.pyc
-${PYSITELIB}/nevow/test/test_testutil.pyo
-${PYSITELIB}/nevow/test/test_url.py
-${PYSITELIB}/nevow/test/test_url.pyc
-${PYSITELIB}/nevow/test/test_url.pyo
-${PYSITELIB}/nevow/test/test_useragent.py
-${PYSITELIB}/nevow/test/test_useragent.pyc
-${PYSITELIB}/nevow/test/test_useragent.pyo
-${PYSITELIB}/nevow/test/test_utils.py
-${PYSITELIB}/nevow/test/test_utils.pyc
-${PYSITELIB}/nevow/test/test_utils.pyo
-${PYSITELIB}/nevow/test/testsupport.js
-${PYSITELIB}/nevow/testutil.py
-${PYSITELIB}/nevow/testutil.pyc
-${PYSITELIB}/nevow/testutil.pyo
-${PYSITELIB}/nevow/url.py
-${PYSITELIB}/nevow/url.pyc
-${PYSITELIB}/nevow/url.pyo
-${PYSITELIB}/nevow/useragent.py
-${PYSITELIB}/nevow/useragent.pyc
-${PYSITELIB}/nevow/useragent.pyo
-${PYSITELIB}/nevow/util.py
-${PYSITELIB}/nevow/util.pyc
-${PYSITELIB}/nevow/util.pyo
-${PYSITELIB}/nevow/vhost.py
-${PYSITELIB}/nevow/vhost.pyc
-${PYSITELIB}/nevow/vhost.pyo
-${PYSITELIB}/twisted/plugins/nevow_widget.py
-${PYSITELIB}/twisted/plugins/nevow_widget.pyc
-${PYSITELIB}/twisted/plugins/nevow_widget.pyo
-share/doc/py-nevow/Makefile
-share/doc/py-nevow/_static/.hidden
-share/doc/py-nevow/_templates/.hidden
-share/doc/py-nevow/conf.py
-share/doc/py-nevow/howto/chattutorial/concepts.rst
-share/doc/py-nevow/howto/chattutorial/env.rst
-share/doc/py-nevow/howto/chattutorial/index.rst
-share/doc/py-nevow/howto/chattutorial/intro.rst
-share/doc/py-nevow/howto/chattutorial/part00/index.rst
-share/doc/py-nevow/howto/chattutorial/part00/listings/echothing/__init__.py
-share/doc/py-nevow/howto/chattutorial/part00/listings/echothing/echobox.py
-share/doc/py-nevow/howto/chattutorial/part00/listings/echothing/js/EchoThing.js
-share/doc/py-nevow/howto/chattutorial/part00/listings/echothing/template.html
-share/doc/py-nevow/howto/chattutorial/part00/listings/nevow/plugins/echothing_package.py
-share/doc/py-nevow/howto/chattutorial/part01/index.rst
-share/doc/py-nevow/howto/chattutorial/part01/listings/chatthing/__init__.py
-share/doc/py-nevow/howto/chattutorial/part01/listings/chatthing/chatterbox.py
-share/doc/py-nevow/howto/chattutorial/part01/listings/chatthing/js/ChatThing.js
-share/doc/py-nevow/howto/chattutorial/part01/listings/chatthing/template.html
-share/doc/py-nevow/howto/chattutorial/part01/listings/nevow/plugins/chatthing_package.py
-share/doc/py-nevow/howto/deployment.rst
-share/doc/py-nevow/howto/gettingstarted.rst
-share/doc/py-nevow/howto/glossary.rst
-share/doc/py-nevow/howto/intro.rst
-share/doc/py-nevow/howto/listings/gettingstarted/helloworld.py
-share/doc/py-nevow/howto/listings/gettingstarted/helloworld.tac
-share/doc/py-nevow/howto/publishing.rst
-share/doc/py-nevow/howto/traversal.rst
-share/doc/py-nevow/howto/xmltemplates.rst
-share/doc/py-nevow/index.rst
-share/doc/py-nevow/man/nevow-xmlgettext.1
-share/doc/py-nevow/old/nevow.doc
-share/doc/py-nevow/old/toc.html
