@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.11 2021/10/26 11:30:44 nia Exp $
-
-BLAKE2s (Nevow-0.14.5.tar.gz) = a75e3e62d85377a85c8de285751e6f67aec1defb2c70e248e593e37e965a18e8
-SHA512 (Nevow-0.14.5.tar.gz) = 192de70bc3ecb8db24c2f5c8a6260a2ad78cde38a59872ffec2597de61875bf6a786986bac2f87c8873b1b9c8d9ad284c48d70ebc7f50229c0e0c204948c5fe2
-Size (Nevow-0.14.5.tar.gz) = 550862 bytes
