@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.4494 2022/09/11 17:59:28 fcambus Exp $
+$NetBSD: CHANGES-2022,v 1.4495 2022/09/11 18:04:04 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -6643,3 +6643,4 @@ Changes to the packages collection and infrastructure in 2022:
 	Removed www/py-graphite-web [wiz 2022-09-11]
 	Removed databases/py-carbon [wiz 2022-09-11]
 	Updated sysutils/fdupes to 2.2.1 [fcambus 2022-09-11]
+	Removed www/py-nevow [wiz 2022-09-11]
